[package]
name = "iii-formosa-dataset"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

description = "Se/Deserialization toolkit for Formosa dataset from Institute for the Information Industry"
# homepage = "https://github.com/jerry73204/voc-dataset-rs"
# repository = "https://github.com/jerry73204/voc-dataset-rs"
# documentation = "https://docs.rs/voc-dataset/"
keywords = ["dataset"]
categories = ["science"]
# license = "MIT"
# readme = "README.md"

[dependencies]
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
serde-xml-rs = "0.4.1"
serde = { version = "1.0.123", features = ["derive"] }
noisy_float = { version = "0.1.13", features = ["serde-1"] }
glob = "0.3.0"

[dev-dependencies]
envy = "0.4.2"
json5 = "0.3.0"
