[package]
name = "iii-formosa-dataset"
version = "0.2.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

description = "Se/Deserialization toolkit for Formosa dataset from Institute for the Information Industry"
homepage = "https://github.com/jerry73204/iii-formosa-dataset"
repository = "https://github.com/jerry73204/iii-formosa-dataset"
documentation = "https://docs.rs/iii-formosa-dataset/"
keywords = ["dataset"]
categories = ["science"]
license-file = "LICENSE.txt"
readme = "README.md"

[dependencies]
log = "0.4.14"
anyhow = "1.0.40"
thiserror = "1.0.24"
serde-xml-rs = "0.4.1"
serde = { version = "1.0.125", features = ["derive"] }
noisy_float = { version = "0.2.0", features = ["serde"] }
glob = "0.3.0"

[dev-dependencies]
envy = "0.4.2"
json5 = "0.3.0"
